Minor IE related fixes
Even though QA Dashboard does not work with IE adjusted the service a
little so it doesn't look completely like crap in IE. Now user can login
and logout also using IE8 :)

--- a/client/less/dashboard.less
+++ b/client/less/dashboard.less
@@ -178,6 +178,7 @@ label {
 #wrap {
 	position: relative;
 	padding-bottom: 30px;
+	min-height: 500px;
 }
 
 #upper_header {
